examples/policies/entities.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "entities-rule"
spec:
  endpointSelector:
    matchLabels:
      env: prod
  ingress:
    - fromEntities:
      - world
