examples/policies/multi_rule.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-rules"
spec:
  endpointSelector:
    matchLabels:
      role: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
      role: frontend
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
