examples/policies/requires.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "requires-rule"
specs:
  - endpointSelector:
      matchLabels:
        env: prod
    ingress:
    - fromRequires:
      - matchLabels:
          env: prod
  - endpointSelector:
      matchLabels:
        role: backend
    ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend
