examples/policies/service-empty.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "service-rule"
spec:
  endpointSelector:
    matchLabels:
      app: app2
  egress:
    - toServices: []
    - toServices:
      - {}
